--- a/customers.management.web/wwwroot/views/addDepartment.html
+++ b/customers.management.web/wwwroot/views/addDepartment.html
@@ -35,11 +35,11 @@
 									</div>
 									<div class="form-group">
 										<select id="departmentManager"
-										        ng-model="added.Manager"
-										        ng-init="getCustomerAvailableUsers(1);">
+										        ng-model="added.ManagerId"
+										        ng-init="getCustomerAvailableUsers();">
 											<option ng-repeat="user in currentDepartmentUsers"
-											        value="{{user}}">
-												{{user.Name}}
+											        value="{{user.id}}">
+												{{user.name}}
 											</option>
 										</select>
 									</div>
