--- a/customers.management.web/wwwroot/views/addUser.html
+++ b/customers.management.web/wwwroot/views/addUser.html
@@ -63,11 +63,11 @@
 									</div>
 									<div class="form-group">
 										<select id="userDepartment"
-										        ng-model="added.Department"
-										        ng-init="getCustomerAvailableDepartments(1);">	
+										        ng-model="selectedDepartment"
+										        ng-init="getCustomerAvailableDepartments();">	
 											<option ng-repeat="dep in currentUserDepartments"
-											        value="{{dep}}">
-												{{dep.Name}}
+											        value="{{dep.id}}">
+												{{dep.name}}
 											</option>
 										</select>
 									</div>
