--- a/customers.management.web/wwwroot/views/customerEdit.html
+++ b/customers.management.web/wwwroot/views/customerEdit.html
@@ -18,7 +18,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="customerName" 
-											   ng-model="editable.Name"/>
+											   ng-model="editable.name"/>
 									</div>
 								</div>
 								<div class="form-inline">
@@ -27,7 +27,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="customerAddress" 
-											   ng-model="editable.Address"/>
+											   ng-model="editable.address"/>
 									</div>
 								</div>
 								<div class="form-inline">
@@ -36,7 +36,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="customerEmail" 
-											   ng-model="editable.Email"/>
+											   ng-model="editable.email"/>
 									</div>
 								</div>
 								<div class="form-inline">
@@ -45,7 +45,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="customerPhone" 
-											   ng-model="editable.Phone"/>
+											   ng-model="editable.phone"/>
 									</div>
 								</div>
 								<div class="form-inline">
@@ -54,7 +54,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="customerComments" 
-											   ng-model="editable.Comments"/>
+											   ng-model="editable.comments"/>
 									</div>
 								</div>
 								<div class="form-inline" style="margin-top: 10px;">
