--- a/customers.management.web/wwwroot/views/departments.html
+++ b/customers.management.web/wwwroot/views/departments.html
@@ -56,7 +56,7 @@
 								</td>
 								<td>{{item.name}}</td>
 								<td>{{item.address}}</td>
-								<td>{{item.manager}}</td>
+								<td>{{item.manager.name}}</td>
 							</tr>
 							</tbody>
 						</table>
