--- a/customers.management.web/wwwroot/views/userEdit.html
+++ b/customers.management.web/wwwroot/views/userEdit.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="userEditController">
+﻿<div ng-controller="userEditController" ng-init="getDepartmentsForEditing();">
 	<div class="row" style="margin-right: 15px; margin-left: 15px; margin-top: 50px;">
 		<div class="col-md-12">
 			<div class="card" style="min-height: 300px!important;">
@@ -18,7 +18,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="userName"
-											   ng-model="editable.Name" />
+											   ng-model="editable.name" />
 									</div>
 								</div>
 								<div class="form-inline">
@@ -27,7 +27,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="userEmail"
-											   ng-model="editable.Email" />
+											   ng-model="editable.email" />
 									</div>
 								</div>
 								<div class="form-inline">
@@ -36,7 +36,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="userMobile"
-											   ng-model="editable.Mobile" />
+											   ng-model="editable.mobile" />
 									</div>
 								</div>
 								<div class="form-inline">
@@ -45,7 +45,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="userLogin"
-											   ng-model="editable.UserName" />
+											   ng-model="editable.userName" />
 									</div>
 								</div>
 								<div class="form-inline">
@@ -54,7 +54,7 @@
 									</div>
 									<div class="form-group">
 										<input type="text" class="form-control white-input-no-border" id="userPassword"
-										       ng-model="editable.Password" />
+										       ng-model="editable.password" />
 									</div>
 									
 									<div class="form-inline">
@@ -63,11 +63,10 @@
 										</div>
 										<div class="form-group">
 											<select id="userDepartment"
-											        ng-model="added.Department"
-											        ng-init="getCustomerAvailableDepartments(1);">												
+											        ng-model="editable.department.name">												
 												<option ng-repeat="dep in currentUserDepartments"
 												        value="{{dep}}">
-													{{dep.Name}}
+													{{dep.name}}
 												</option>
 											</select>
 										</div>
