--- a/customers.management.web/wwwroot/views/users.html
+++ b/customers.management.web/wwwroot/views/users.html
@@ -71,7 +71,7 @@
 								<td>{{item.mobile}}</td>
 								<td>{{item.userName}}</td>
 								<td>{{item.password}}</td>
-								<td>{{item.department}}</td>
+								<td>{{item.department.name}}</td>
 							</tr>
 							</tbody>
 						</table>
