ui view, admin/user page

--- a/customers.management.web/wwwroot/views/header.html
+++ b/customers.management.web/wwwroot/views/header.html
@@ -17,13 +17,7 @@
 		<div class="container-fluid">
 			<ul class="nav navbar-nav" id="navbar" style="font-size: 10pt;">
 				<li>
-					<a href="#!general">General Info</a>
-				</li>
-				<li>
-					<a href="#!users">Users</a>
-				</li>
-				<li>
-					<a href="#!departments">Departments</a>
+					<a ng-hide="isLogined">Customers Management</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" id="navForLogout" style="font-size: 10pt;">
