--- a/customers.management.web/wwwroot/css/common.css
+++ b/customers.management.web/wwwroot/css/common.css
@@ -68,7 +68,7 @@ a > .fa-trash:hover {
         background-color: white !important;
     }
 
-.table > thead > tr > th, .table > tbody > tr > td {
+ .table > tbody > tr > td {
     padding: 6px;
     text-align: center;
     vertical-align: middle;
