--- a/customers.management.web/wwwroot/views/adminPage.html
+++ b/customers.management.web/wwwroot/views/adminPage.html
@@ -23,6 +23,11 @@
 		        ng-click="selectCustomer();">
 			Select
 		</button>
+		<div class="form-group">
+			<a ng-click="editCustomers();">
+				<i class="fa fa-pencil" aria-hidden="true"></i>
+			</a>
+		</div>
 	</div>
 	<div class="col-md-8" ng-hide="!show">
 		<div class="pull-right">
@@ -72,25 +77,43 @@
 					<div class="form-group" style="width: 15% !important;">
 						{{$index+1}}
 					</div>
-					<div class="form-group" style="width: 20% !important;"
-					     ng-show="isAdmin">
-						<a ng-click="editCustomer(item);">
-							<i class="fa fa-pencil" aria-hidden="true"></i>
-						</a>
-					</div>
-					<div class="form-group" style="width: 20% !important;"
-					     ng-show="isAdmin">
-						<a ng-click="deleteCustomer(item.id);">
+					<div class="form-group" style="width: 20% !important;">
+						<a ng-click="deleteCustomer($index, item.id);">
 							<i class="fa fa-trash" aria-hidden="true"></i>
 						</a>
 					</div>
 				</form>
 			</td>
-			<td>{{item.customer.name}}</td>
-			<td>{{item.customer.address}}</td>
-			<td>{{item.customer.email}}</td>
-			<td>{{item.customer.phone}}</td>
-			<td>{{item.customer.comments}}</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Name"
+				       ng-disabled="!editCust"
+				       ng-model="item.customer.name" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Address"
+				       ng-disabled="!editCust"
+				       ng-model="item.customer.address" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Email"
+				       ng-disabled="!editCust"
+				       ng-model="item.customer.email" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Phone"
+				       ng-disabled="!editCust"
+				       ng-model="item.customer.phone" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Comments"
+				       ng-disabled="!editCust"
+				       ng-model="item.customer.comments" />
+			</td>
 		</tr>
 		</tbody>
 	</table>
@@ -99,6 +122,11 @@
 <hr/>
 <div class="card-header" ng-hide="!show">
 	<h4 class="card-title">Customer Contacts</h4>
+	<div class="form-group">
+		<a ng-click="editContacts();">
+			<i class="fa fa-pencil" aria-hidden="true"></i>
+		</a>
+	</div>
 	<div class="pull-right">
 		<button class="btn btn-facebook btn-fill btn-sm"
 		        ng-click="addContact();">
@@ -141,21 +169,36 @@
 						{{$index+1}}
 					</div>
 					<div class="form-group" style="width: 20% !important;">
-						<a ng-click="editContact(item);">
-							<i class="fa fa-pencil" aria-hidden="true"></i>
-						</a>
-					</div>
-					<div class="form-group" style="width: 20% !important;">
-						<a ng-click="deleteContact(item.id);">
+						<a ng-click="deleteContact($index, item.id);">
 							<i class="fa fa-trash" aria-hidden="true"></i>
 						</a>
 					</div>
 				</form>
 			</td>
-			<td>{{item.name}}</td>
-			<td>{{item.role}}</td>
-			<td>{{item.email}}</td>
-			<td>{{item.phone}}</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Name"
+				       ng-disabled="!editCont"
+				       ng-model="item.name"/>
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Role"
+				       ng-disabled="!editCont"
+				       ng-model="item.role" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Email"
+				       ng-disabled="!editCont"
+				       ng-model="item.email" />
+			</td>
+			<td>
+				<input type="text" class="form-control white-input-no-border"
+				       placeholder="Phone"
+				       ng-disabled="!editCont"
+				       ng-model="item.phone" />
+			</td>
 		</tr>
 		</tbody>
 	</table>
@@ -164,6 +207,11 @@
 <hr/>
 <div class="card-header" ng-hide="!show">
 	<h4 class="card-title">Users</h4>
+	<div class="form-group">
+		<a ng-click="editUsers();">
+			<i class="fa fa-pencil" aria-hidden="true"></i>
+		</a>
+	</div>
 	<div class="pull-right">
 		<button class="btn btn-facebook btn-fill btn-sm"
 		        ng-click="addUser();">
@@ -215,23 +263,56 @@
 							{{$index+1}}											
 						</div>
 						<div class="form-group" style="width: 20% !important;">
-							<a ng-click="editUser(item);">
-								<i class="fa fa-pencil" aria-hidden="true"></i>
-							</a>
-						</div>
-						<div class="form-group" style="width: 20% !important;">
-							<a ng-click="deleteUser(item.id);">
+							<a ng-click="deleteUser($index, item.id);">
 								<i class="fa fa-trash" aria-hidden="true"></i>
 							</a>
 						</div>
 					</form>
 				</td>
-				<td>{{item.name}}</td>
-				<td>{{item.email}}</td>
-				<td>{{item.mobile}}</td>
-				<td>{{item.userName}}</td>
-				<td>{{item.password}}</td>
-				<td>{{item.department.name}}</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Name"
+					       ng-disabled="!editUs"
+					       ng-model="item.name" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Email"
+					       ng-disabled="!editUs"
+					       ng-model="item.email" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Mobile"
+					       ng-disabled="!editUs"
+					       ng-model="item.mobile" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="userName"
+					       ng-disabled="!editUs"
+					       ng-model="item.userName" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Password"
+					       ng-disabled="!editUs"
+					       ng-model="item.password" />
+				</td>
+				<td>
+					<div ng-hide="editUs">
+						{{showUserDepartment(item.department.id)}}
+					</div>
+					<select class="form-control white-input-no-border"
+					        ng-model="item.department.id"
+					        style="width: 98% !important;"
+					        ng-hide="!editUs">
+						<option ng-repeat="d in departments"
+						        value="{{d.id}}">
+							{{d.name}}
+						</option>
+					</select>
+				</td>
 			</tr>
 			</tbody>
 		</table>
@@ -241,6 +322,11 @@
 <hr/>
 <div class="card-header" ng-hide="!show">
 	<h4 class="card-title">Departments</h4>
+	<div class="form-group">
+		<a ng-click="editDepartments();">
+			<i class="fa fa-pencil" aria-hidden="true"></i>
+		</a>
+	</div>
 	<div class="pull-right">
 		<button class="btn btn-facebook btn-fill btn-sm"
 		        ng-click="addDepartment();">
@@ -280,24 +366,54 @@
 							{{$index+1}}											
 						</div>
 						<div class="form-group" style="width: 20% !important;">
-							<a ng-click="editDepartment(item);">
-								<i class="fa fa-pencil" aria-hidden="true"></i>
-							</a>
-						</div>
-						<div class="form-group" style="width: 20% !important;">
-							<a ng-click="deleteDepartment(item.id);">
+							<a ng-click="deleteDepartment($index, item.id);">
 								<i class="fa fa-trash" aria-hidden="true"></i>
 							</a>
 						</div>
 					</form>
 				</td>
-				<td>{{item.name}}</td>
-				<td>{{item.address}}</td>
-				<td>{{item.manager.name}}</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Name"
+					       ng-disabled="!editDeps"
+					       ng-model="item.name" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Address"
+					       ng-disabled="!editDeps"
+					       ng-model="item.address" />
+				</td>
+				<td>
+					<div ng-hide="editDeps">
+						{{showManager(item.manager.userId)}}
+					</div>
+					<select class="form-control white-input-no-border"
+					        ng-model="item.manager.userId"
+					        style="width: 98% !important;"
+					        ng-hide="!editDeps">
+						<option ng-repeat="u in users"
+						        value="{{u.id}}">
+							{{u.name}}
+						</option>
+					</select>
+				</td>
 			</tr>
 			</tbody>
 		</table>
 	</div>
+</div>
+<div class="form-inline" 
+     style="margin-top: 100px; text-align: center;"
+	 ng-hide="!show">
+	<button class="btn btn-success btn-fill btn-sm"
+	        ng-click="apply();">
+		Apply
+	</button>
+	<button class="btn btn-danger btn-fill btn-sm"
+	        ng-click="cancel();">
+		Cancel
+	</button>
 </div>
 </div>
 </div>
