--- a/customers.management.web/wwwroot/views/adminPage.html
+++ b/customers.management.web/wwwroot/views/adminPage.html
@@ -32,6 +32,7 @@
 	<div class="col-md-8" ng-hide="!show">
 		<div class="pull-right">
 			<button class="btn btn-facebook btn-fill btn-sm"
+			        ng-show="!saveCustomerTrue"
 			        ng-click="addCustomer();">
 				Add Customer
 			</button>
@@ -40,6 +41,17 @@
 </div>
 					
 <div class="card-content table-responsive table-full-width">
+	<div class="row">
+		<div class="pull-right">
+			<button class="btn btn-facebook btn-fill btn-sm"
+			        ng-show="saveCustomerTrue"
+			        ng-click="saveCustomer();">
+				Save Customer
+			</button>
+		</div>
+	</div>
+	
+	<br/>
 	<table class="table">
 		<thead>
 		<tr style="text-align: center; vertical-align: middle">
@@ -78,7 +90,7 @@
 						{{$index+1}}
 					</div>
 					<div class="form-group" style="width: 20% !important;">
-						<a ng-click="deleteCustomer($index, item.id);">
+						<a ng-click="deleteCustomer($index, item.customer.id);">
 							<i class="fa fa-trash" aria-hidden="true"></i>
 						</a>
 					</div>
