--- a/customers.management.web/wwwroot/views/adminPage.html
+++ b/customers.management.web/wwwroot/views/adminPage.html
@@ -23,16 +23,10 @@
 		        ng-click="selectCustomer();">
 			Select
 		</button>
-		<div class="form-group">
-			<a ng-click="editCustomers();">
-				<i class="fa fa-pencil" aria-hidden="true"></i>
-			</a>
-		</div>
 	</div>
-	<div class="col-md-8" ng-hide="!show">
+	<div class="col-md-8">
 		<div class="pull-right">
 			<button class="btn btn-facebook btn-fill btn-sm"
-			        ng-show="!saveCustomerTrue"
 			        ng-click="addCustomer();">
 				Add Customer
 			</button>
@@ -41,18 +35,9 @@
 </div>
 					
 <div class="card-content table-responsive table-full-width">
-	<div class="row">
-		<div class="pull-right">
-			<button class="btn btn-facebook btn-fill btn-sm"
-			        ng-show="saveCustomerTrue"
-			        ng-click="saveCustomer();">
-				Save Customer
-			</button>
-		</div>
-	</div>
 	
 	<br/>
-	<table class="table">
+	<table class="table" ng-show="show">
 		<thead>
 			<tr style="text-align: center; vertical-align: middle">
 				<th>
@@ -102,41 +87,32 @@
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Name"
-				       ng-disabled="!editCust"
 				       ng-model="item.customer.name" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Address"
-				       ng-disabled="!editCust"
 				       ng-model="item.customer.address" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Email"
-				       ng-disabled="!editCust"
 				       ng-model="item.customer.email" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Phone"
-				       ng-disabled="!editCust"
 				       ng-model="item.customer.phone" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Comments"
-				       ng-disabled="!editCust"
 				       ng-model="item.customer.comments" />
 			</td>
 			<td>
-				<div ng-hide="editCust">
-					{{showCustomerTypes(item.customer.typeId)}}
-				</div>
 				<select class="form-control white-input-no-border"
 				        ng-model="item.customer.typeId"
-				        style="width: 98% !important;"
-				        ng-hide="!editCust">
+				        style="width: 98% !important;">
 					<option ng-repeat="t in types"
 					        value="{{t.id}}">
 						{{t.name}}
@@ -151,11 +127,6 @@
 <hr/>
 <div class="card-header" ng-hide="!show">
 	<h4 class="card-title">Customer Contacts</h4>
-	<div class="form-group">
-		<a ng-click="editContacts();">
-			<i class="fa fa-pencil" aria-hidden="true"></i>
-		</a>
-	</div>
 	<div class="pull-right">
 		<button class="btn btn-facebook btn-fill btn-sm"
 		        ng-click="addContact();">
@@ -207,40 +178,107 @@
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Name"
-				       ng-disabled="!editCont"
 				       ng-model="item.name"/>
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Role"
-				       ng-disabled="!editCont"
 				       ng-model="item.role" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Email"
-				       ng-disabled="!editCont"
 				       ng-model="item.email" />
 			</td>
 			<td>
 				<input type="text" class="form-control white-input-no-border"
 				       placeholder="Phone"
-				       ng-disabled="!editCont"
 				       ng-model="item.phone" />
 			</td>
 		</tr>
 		</tbody>
 	</table>
 </div>
+
 					
 <hr/>
 <div class="card-header" ng-hide="!show">
-	<h4 class="card-title">Users</h4>
-	<div class="form-group">
-		<a ng-click="editUsers();">
-			<i class="fa fa-pencil" aria-hidden="true"></i>
-		</a>
+	<h4 class="card-title">Customer Departments</h4>
+	<div class="pull-right">
+		<button class="btn btn-facebook btn-fill btn-sm"
+		        ng-click="addDepartment();">
+			Add Department
+		</button>
 	</div>
+</div>
+<div class="card-content" style="padding: 0 15px 10px 15px;">
+	<div class="card-content table-responsive table-full-width" ng-hide="!show">
+		<table class="table">
+			<thead>
+			<tr style="text-align: center; vertical-align: middle">
+				<th>
+					<a href="">#</a>
+				</th>
+
+				<th>
+					<a href="">Name</a>
+				</th>
+
+				<th>
+					<a href="">Address</a>
+				</th>
+
+				<th>
+					<a href="">Manager</a>
+				</th>
+			</tr>
+			</thead>
+
+			<tbody>
+			<tr style="text-align: center; vertical-align: middle"
+			    ng-repeat="item in departments track by $index">
+				<td>
+					<form class="form-inline">
+						<div class="form-group" style="width: 15% !important;">
+							{{$index+1}}											
+						</div>
+						<div class="form-group" style="width: 20% !important;">
+							<a ng-click="deleteDepartment($index, item.id);">
+								<i class="fa fa-trash" aria-hidden="true"></i>
+							</a>
+						</div>
+					</form>
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Name"
+					       ng-model="item.name" />
+				</td>
+				<td>
+					<input type="text" class="form-control white-input-no-border"
+					       placeholder="Address"
+					       ng-model="item.address" />
+				</td>
+				<td>
+					<select class="form-control white-input-no-border"
+					        ng-model="item.manager.userId"
+					        style="width: 98% !important;">
+						<option ng-repeat="u in users"
+						        value="{{u.id}}">
+							{{u.name}}
+						</option>
+					</select>
+				</td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+	
+
+<hr/>
+<div class="card-header" ng-hide="!show">
+	<h4 class="card-title">Customer Users</h4>
 	<div class="pull-right">
 		<button class="btn btn-facebook btn-fill btn-sm"
 		        ng-click="addUser();">
@@ -301,41 +339,32 @@
 				<td>
 					<input type="text" class="form-control white-input-no-border"
 					       placeholder="Name"
-					       ng-disabled="!editUs"
 					       ng-model="item.name" />
 				</td>
 				<td>
 					<input type="text" class="form-control white-input-no-border"
 					       placeholder="Email"
-					       ng-disabled="!editUs"
 					       ng-model="item.email" />
 				</td>
 				<td>
 					<input type="text" class="form-control white-input-no-border"
 					       placeholder="Mobile"
-					       ng-disabled="!editUs"
 					       ng-model="item.mobile" />
 				</td>
 				<td>
 					<input type="text" class="form-control white-input-no-border"
 					       placeholder="userName"
-					       ng-disabled="!editUs"
 					       ng-model="item.userName" />
 				</td>
 				<td>
 					<input type="text" class="form-control white-input-no-border"
 					       placeholder="Password"
-					       ng-disabled="!editUs"
 					       ng-model="item.password" />
 				</td>
 				<td>
-					<div ng-hide="editUs">
-						{{showUserDepartment(item.department.id)}}
-					</div>
 					<select class="form-control white-input-no-border"
 					        ng-model="item.department.id"
-					        style="width: 98% !important;"
-					        ng-hide="!editUs">
+					        style="width: 98% !important;">
 						<option ng-repeat="d in departments"
 						        value="{{d.id}}">
 							{{d.name}}
@@ -348,90 +377,7 @@
 	</div>
 </div>
 	
-<hr/>
-<div class="card-header" ng-hide="!show">
-	<h4 class="card-title">Departments</h4>
-	<div class="form-group">
-		<a ng-click="editDepartments();">
-			<i class="fa fa-pencil" aria-hidden="true"></i>
-		</a>
-	</div>
-	<div class="pull-right">
-		<button class="btn btn-facebook btn-fill btn-sm"
-		        ng-click="addDepartment();">
-			Add Department
-		</button>
-	</div>
-</div>
-<div class="card-content" style="padding: 0 15px 10px 15px;">
-	<div class="card-content table-responsive table-full-width" ng-hide="!show">
-		<table class="table">
-			<thead>
-			<tr style="text-align: center; vertical-align: middle">
-				<th>
-					<a href="">#</a>
-				</th>
 
-				<th>
-					<a href="">Name</a>
-				</th>
-
-				<th>
-					<a href="">Address</a>
-				</th>
-
-				<th>
-					<a href="">Manager</a>
-				</th>
-			</tr>
-			</thead>
-
-			<tbody>
-			<tr style="text-align: center; vertical-align: middle"
-			    ng-repeat="item in departments track by $index">
-				<td>
-					<form class="form-inline">
-						<div class="form-group" style="width: 15% !important;">
-							{{$index+1}}											
-						</div>
-						<div class="form-group" style="width: 20% !important;">
-							<a ng-click="deleteDepartment($index, item.id);">
-								<i class="fa fa-trash" aria-hidden="true"></i>
-							</a>
-						</div>
-					</form>
-				</td>
-				<td>
-					<input type="text" class="form-control white-input-no-border"
-					       placeholder="Name"
-					       ng-disabled="!editDeps"
-					       ng-model="item.name" />
-				</td>
-				<td>
-					<input type="text" class="form-control white-input-no-border"
-					       placeholder="Address"
-					       ng-disabled="!editDeps"
-					       ng-model="item.address" />
-				</td>
-				<td>
-					<div ng-hide="editDeps">
-						{{showManager(item.manager.userId)}}
-					</div>
-					<select class="form-control white-input-no-border"
-					        ng-model="item.manager.userId"
-					        style="width: 98% !important;"
-					        ng-hide="!editDeps">
-						<option ng-repeat="u in users"
-						        value="{{u.id}}">
-							{{u.name}}
-						</option>
-					</select>
-				</td>
-			</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
 <div class="form-inline" 
      style="margin-top: 100px; text-align: center;"
 	 ng-hide="!show">
